# pico_dm_qd3503728_freertos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: debug.h  ft6236.h  ili9488.h
scripts/: compile.sh  deploy.sh  switch_branch.sh
src/: CMakeLists.txt  FreeRTOSConfig.h  ft6236.c  ili9488.c  lv_conf.h  main.c
src/pio/: i80.c  i80.pio
src/porting/: lv_port_disp_template.c
